--- a/client/www/index.html
+++ b/client/www/index.html
@@ -20,8 +20,10 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/configuration.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    
     <script src="lib/angular-resource/angular-resource.js"></script>
   </head>
 
